Test/dafny4/git-issue53.dfy
// RUN: %exits-with 2 %baredafny verify %args "%s" > "%t"
// RUN: %diff "%s.expect" "%t"

predicate P() {
  forall m:mode :: m == m
}
